DARK MODE - try out a new look for the site with a black background and azure color theme - the form elements have new background/ color effects onHover - put a border around the banner image - the image is nolonger fixed - the scroll down arrow in the banner has a black color onHover - all paragraphs and other text content have 1.5rem line-height

--- a/css/application.css
+++ b/css/application.css
@@ -6,11 +6,10 @@ span.icon-menu {
   right: 0;
   box-sizing: border-box;
   color: rgb(115, 4, 4);
-  margin: 0.5rem;
   border-radius: 3px;
   font-size: 3rem;
   font-weight: 100;
-  background-color: white;
+  background-color: black;
   transition: 0.2s;
 }
 span.icon-menu:hover {
@@ -91,6 +90,8 @@ nav ul li:last-child section div a:hover {
 }
 
 header section#banner {
+  margin-top: 0;
+  border: groove black 5px;
   position: relative;
   z-index: 3;
   width: 100%;
@@ -98,7 +99,6 @@ header section#banner {
   background-image: url("../assets/images/go.jpg");
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
   background-repeat: no-repeat;
   filter: contrast(100%);
   filter: grayscale(30%);
@@ -166,7 +166,7 @@ header section#banner div#see-my-portfolio a span.icon-arrow-down {
   transition: 1s;
 }
 header section#banner div#see-my-portfolio a span.icon-arrow-down:hover {
-  color: lightgray;
+  color: black;
 }
 @media screen and (min-width: 768px) {
   header section#banner big {
@@ -181,7 +181,8 @@ section {
   box-sizing: border-box;
   width: 100%;
   padding: 1rem 10% 0px;
-  margin: auto;
+  margin: 3rem auto;
+  background-color: black;
 }
 section#about-me {
   min-height: 100vh;
@@ -203,6 +204,7 @@ section#about-me article.about-me {
 }
 section#about-me article.about-me * {
   text-align: center;
+  color: azure;
 }
 section#about-me article.about-me strong {
   display: block;
@@ -218,6 +220,7 @@ section#about-me article.about-me span.waving-hand {
 section#about-me article.about-me p {
   font-size: 0.8rem;
   text-align: justify;
+  line-height: 1.5rem;
 }
 @media screen and (min-width: 922px) {
   section#about-me article.about-me p {
@@ -260,11 +263,14 @@ section#about-me article#certification-links {
 }
 section#about-me article#certification-links p {
   font-size: 0.9rem;
+  margin-bottom: 1rem;
 }
 section#about-me article#certification-links a {
   display: inline-block;
   text-align: center;
-  padding: 0.5rem;
+  margin: 0 1rem;
+  padding: 0.1rem;
+  background-color: azure;
 }
 section#about-me article#certification-links a img {
   width: 2rem;
@@ -286,6 +292,7 @@ section#portfolio h2 {
 }
 section#portfolio h2 {
   margin-bottom: 3rem;
+  padding-left: 3rem;
 }
 section#portfolio h2 + p {
   margin-bottom: 1rem;
@@ -299,6 +306,7 @@ section#portfolio p, section#portfolio dt, section#portfolio dl {
   font-size: 0.8rem;
   text-align: left;
   margin-left: 0;
+  color: azure;
 }
 section#portfolio dl {
   padding: 1rem;
@@ -324,8 +332,8 @@ section#portfolio dl p {
     padding-left: 3rem;
   }
 }
-section#portfolio h2 {
-  padding-left: 3rem;
+section#portfolio p {
+  line-height: 1.5rem;
 }
 section#portfolio div#portfolio-list-of-projects {
   box-sizing: border-box;
@@ -453,6 +461,7 @@ section#code-examples div#code-examples-main-container div#problem-solution-sele
   text-align: justify;
   margin-top: -3rem;
   margin-bottom: 2rem;
+  color: azure;
 }
 section#code-examples div#code-examples-main-container div#problem-solution-selector div#solutions-tags-container {
   padding: 2rem 0;
@@ -527,6 +536,10 @@ section#scion-coalition-scheme article {
   font-font-weight: 300;
   font-size: 0.8rem;
 }
+section#scion-coalition-scheme article p {
+  color: azure;
+  line-height: 1.5rem;
+}
 section#scion-coalition-scheme article p:first-letter {
   font-family: "Madimi One", sans-serif;
   font-size: 200%;
@@ -598,7 +611,7 @@ footer#main-footer section#enquiry-form form div.contact-info-detail label {
   min-width: 90px;
   width: 35%;
   padding: 0.2rem;
-  color: #5e6480;
+  color: azure;
   align-self: center;
   font-size: 80%;
   font-weight: 500;
@@ -617,7 +630,8 @@ footer#main-footer section#enquiry-form form div input, footer#main-footer secti
   transition: 0.2s;
 }
 footer#main-footer section#enquiry-form form div input:focus, footer#main-footer section#enquiry-form form div textarea:focus {
-  background-color: #ededed;
+  background-color: #212121;
+  color: azure;
 }
 footer#main-footer section#enquiry-form form div textarea {
   margin: 2rem 0 0 0;
@@ -643,7 +657,8 @@ footer#main-footer section#enquiry-form form button {
   font-weight: 600;
 }
 footer#main-footer section#enquiry-form form button:hover {
-  background-color: lightgray;
+  background-color: #212121;
+  color: azure;
 }
 @media screen and (min-width: 768px) {
   footer#main-footer section#enquiry-form form {
@@ -660,6 +675,7 @@ section#enquiry-form, button {
 }
 
 section#media-links {
+  background-color: transparent;
   margin: 0 auto 1rem;
   padding-top: 1rem;
   display: flex;
@@ -752,7 +768,7 @@ section#media-links div.sm-icons-container a:hover {
 
 body {
   width: 100%;
-  background-color: #fbfcfa;
+  background-color: black;
   padding: 0 0 0.25rem 0;
   font-family: "Spline Sans Mono", monospace;
   font-size: 16px;
