--- a/scss/mixins/index.scss
+++ b/scss/mixins/index.scss
@@ -115,6 +115,8 @@
         size: .8rem;
     }
     p{
+        color: azure;
+        line-height: 1.5rem;
         &:first-letter{
             font-family: $bold-sans-serif;
             font-size: 200%;
