--- a/scss/partials/_styles.scss
+++ b/scss/partials/_styles.scss
@@ -5,11 +5,10 @@ span.icon-menu{
     right: 0;
     box-sizing: border-box;
     color: rgb(115, 4, 4);
-    margin: .5rem;
     border-radius: 3px;
     font-size: 3rem;
     font-weight: 100;
-    background-color: white;
+    background-color: black;
     transition: .2s;
     &:hover{
         transform: scale(1.2);
@@ -92,6 +91,8 @@ nav{
 header{
     //BANNER
     section#banner{
+        margin-top: 0;
+        border: groove black 5px;
         position: relative;
         z-index: 3;
         width: 100%;
@@ -99,7 +100,7 @@ header{
         background-image:url("../assets/images/go.jpg");
         background-size: cover;
         background-position: center;
-        background-attachment: fixed;
+        // background-attachment: fixed;
         background-repeat: no-repeat;  
         filter: contrast(100%);
         filter: grayscale(30%);    
@@ -166,7 +167,8 @@ header{
                     text-shadow: black 1px 1px 5px;
                     transition: 1s;
                     &:hover{
-                        color: lightgray;
+                        // color: lightgray;
+                        color: black;
                     }
                 }
             }
@@ -186,7 +188,8 @@ section{
     box-sizing: border-box;
     width: 100%;
     padding: 1rem 10% 0px;
-    margin: auto;
+    margin: 3rem auto;
+    background-color: black;
     &#about-me{
         min-height: 100vh;
         display: flex;
@@ -196,6 +199,7 @@ section{
             flex: 1;
             *{
                 text-align: center;
+                color: azure;
             }
             strong{
                 display: block;
@@ -213,6 +217,7 @@ section{
             p{
                 font-size: .8rem;
                 text-align: justify;
+                line-height: 1.5rem;
                 @media screen and (min-width: 922px){
                     text-align: center;
                 }
@@ -253,11 +258,14 @@ section{
             flex-direction: column;
             p{
                 font-size: .9rem;
+                margin-bottom: 1rem;
             }
             a{
                 display: inline-block;
                 text-align: center;
-                padding: .5rem;
+                margin: 0 1rem;
+                padding: .1rem;
+                background-color: azure;
                 img{
                     width: 2rem; 
                     height: 2rem;
@@ -271,6 +279,8 @@ section{
         @include section-heading;
         h2{
             margin-bottom: 3rem;
+            //make room for the navigation menu
+            padding-left: 3rem;
         }
         h2 + p{
             margin-bottom: 1rem;
@@ -284,6 +294,7 @@ section{
             font-size: .8rem;
             text-align: left;
             margin-left: 0;
+            color: azure;
         }
         dl{
             padding: 1rem;
@@ -306,9 +317,8 @@ section{
                 }
             }
         }
-        h2{
-            //make room for the navigation menu
-            padding-left: 3rem;
+        p{
+            line-height: 1.5rem;
         }
         div#portfolio-list-of-projects{
             box-sizing: border-box;
@@ -409,6 +419,7 @@ section{
                     text-align: justify;
                     margin-top: -3rem;
                     margin-bottom: 2rem;
+                    color: azure;
                 }
                 div#solutions-tags-container{
                     padding: 2rem 0;
@@ -482,7 +493,8 @@ footer#main-footer{
                         min-width: 90px;
                         width: 35%;
                         padding: .2rem;
-                        color: $light-base-text;
+                        // color: $light-base-text;
+                        color: azure;
                         align-self: center;
                         font: {
                             size: 80%;
@@ -503,7 +515,8 @@ footer#main-footer{
                     color: $dark-base-text;
                     transition: .2s;
                     &:focus{
-                        background-color: lighten(lightgray, 10%);
+                        background-color: darken(lightgray, 70%);
+                        color: azure;
                     }
                 }
                 textarea{
@@ -532,7 +545,8 @@ footer#main-footer{
                     weight: 600;
                 }
                 &:hover{
-                    background-color: darken(lightgray, .1%);
+                    background-color: darken(lightgray, 70%);
+                    color: azure;
                 }
             }
             @media screen and (min-width: 768px){
@@ -550,6 +564,7 @@ section#enquiry-form, button{
 }
 //SM LINKS
 section#media-links{
+    background-color: transparent;
     margin: 0 auto 1rem;
     padding-top: 1rem;
     display: flex;
